tests/paczka1/fuzzy1/37178194.err
Error in line 4: HkU7yC S186 75,6
Error in line 3: tRm A958 39,1
Error in line 7: HkU7yC A958 67,3
Error in line 11: tRm S147 15,7
Error in line 10: 7hlQ S7 42,8
Error in line 17: 7hlQ S147 4,84
Error in line 16: 7hlQ S147 31,6
Error in line 15: tRm S186 92,3
Error in line 23: FYTPjH A958 58,7
Error in line 25: FYTPjH S147 82,1
Error in line 29: S147 S7 23,7
Error in line 34: S147 S147 85,8
